--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,28 @@
 {
-  "name": "package-name",
-  "type": "library",
-  "version": "0.0.0",
-  "description": "A cms-kit wizard to edit markup of (writable) files located in actual project folder",
-  "license": "GPL",
-  "authors": [
-    {
-      "name": "Christoph Taubmann",
-      "email": "info@cms-kit.com"
-    }
-  ],
-  "homepage": "http://cms-kit.com",
+    "name": "cmskit/wizard-fileeditor",
+    "type": "library",
+    "version": "0.0.0",
+    "description": "A cms-kit wizard to edit markup of (writable) files located in actual project folder",
+    "license": "GPL",
+    "authors": [
+        {
+            "name": "Christoph Taubmann",
+            "email": "info@cms-kit.com"
+        }
+    ],
+    "homepage": "http://cms-kit.com",
 
     "require": {
-    "php": ">=5.3.3",
-    "cmskit/lib-jquery-ui": "dev-master",
-    "cmskit/lib-ace-editor": "dev-master"
-  },
-    "extra":{
-        "wizards":{
+        "php": ">=5.3.3",
+        "cmskit/package-installer": "1.0.*@dev",
+        "cmskit/jquery-ui": "dev-master",
+        "cmskit/ace-editor": "dev-master"
+    },
+    "extra": {
+        "wizards": {
             "VARCHAR": {
                 "description": "",
-                "embed": "wizard:fileedit\\nexternal:true"
+                "embed": "wizard:fileeditor\\nexternal:true"
             }
         }
     }
